--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
             $('#result1').removeClass('name');
             $('.name').animate({opacity: .25});
             $('#result1').animate({height: '+=60px'});
-            $('#result1').append('<div class="extra"><a class="small alert button" href="#" onClick="removevictim();">Remove name from list</a></div>');
+            $('#result1').append('<div class="extra"><a class="small alert button" href="#" onClick="removeName();">Remove name from list</a></div>');
             $('#go').removeAttr('disabled', 'disabled');
             $('#list').removeAttr('disabled', 'disabled');
             $('#save').removeAttr('disabled', 'disabled');
@@ -523,7 +523,7 @@
             $('#headline').slideDown();
         }
 
-        function removevictim() {
+        function removeName() {
             // Removing victim from array and UI
             // names = names.filter(function(){ return true});
             // Rewriting namesbox contents
