--- a/index.html
+++ b/index.html
@@ -267,7 +267,6 @@
                     var names = "";
 
                     try {
-                        // var b = this.responseText.replace(/"/g, "'"); // jshint ignore:line
                         var obj = JSON.parse(this.responseText);
 
                         if(obj.hasOwnProperty("error")){
@@ -282,7 +281,7 @@
                         }
                     }
                     catch(err) {
-                        console.error("FAILED TO PARSE EDIT REQUEST RESPONSE:", err);
+                        console.error("Failed to parse xhr request: ", err);
                         alert("Unable to submit entry: " + err);
                     }
                 }
@@ -306,112 +305,6 @@
 
     <script>
         var text;
-
-        function reset() {
-            // re-enable go button
-            setTimeout("$('#go').removeAttr('disabled')", 11005);
-            var namesbreak = "";
-            if (gup('names') != "") {
-                var names = gup('names');
-                namesbreak = names.replace(/101/g, '\n');
-                namesbreak = namesbreak.replace(/%20/g, ' ');
-            }
-            else {
-                var names = new Array('Barbara McFell',
-                    'Tempo McKeteketly',
-                    'Maonga Irpaae',
-                    'Jose Tunisia',
-                    'Bob Bobson',
-                    'Harold Greenoff',
-                    'Jeff Penn',
-                    'Ewan Freedom',
-                    'Benjamin Turkin',
-                    'Robert Harper',
-                    'Sally Cladwell',
-                    'Gregory Tomson',
-                    'Benita Dano',
-                    'Tameka Chea',
-                    'Fernando Guntrum',
-                    'Cody Devita',
-                    'Margery Moloney',
-                    'Jessie Wagar',
-                    'Jessie Burkhard',
-                    'Cody Lamotte',
-                    'Tabatha Cantley',
-                    'Hugh Fullwood',
-                    'Emilia Janusz',
-                    'Erik Taketa',
-                    'Lenore Laughter',
-                    'Kathrine Palazzo',
-                    'Lonnie Garron',
-                    'Tyrone Shott',
-                    'Gay Duble',
-                    'Pearlie Newberg',
-                    'Clinton Rayl',
-                    'Louisa Strey',
-                    'Saundra Ingenito',
-                    'Fernando Jenkin',
-                    'Maricela Tonkin',
-                    'Allie Borjas',
-                    'Clinton Rickenbacker',
-                    'Cody Golay',
-                    'Jerri Tienda',
-                    'Nita Pippen',
-                    'Alejandra Bonhomme',
-                    'Nelson Eguia',
-                    'Rae Velasques',
-                    'Boyce Edeker',
-                    'Cedrick Culotti',
-                    'Elenora Nagindas',
-                    'Arletta Miran',
-                    'Alica Knudsvig',
-                    'Von Ostroot',
-                    'Tomika Nuesca',
-                    'Felton Pattinson',
-                    'Cristopher Laper',
-                    'Shonna Parrotta',
-                    'Sarina Macurdy',
-                    'Waylon Companie',
-                    'Shon Carratura',
-                    'Jae Kneser',
-                    'Janett Papiernik',
-                    'Lynwood Bellar',
-                    'Jeramy Contopoulos',
-                    'Hong Nederostek',
-                    'Gigi Mccarn',
-                    'Sid Mursko',
-                    'Bielser',
-                    'Jospeh Lustberg',
-                    'Spring Luckinbill',
-                    'Ciera Chionchio',
-                    'Marleen Litchard',
-                    'Eldridge Brynga',
-                    'Leif Dinho',
-                    'Gigi Kornblatt',
-                    'Idell Chagollan',
-                    'Michale Mcclod'
-                );
-                for (var i in names) {
-                    name = names[i];
-                    if (name == "" || typeof(name) == undefined) {
-                    } else {
-                        namesbreak = namesbreak + name + "\n";
-                    }
-                }
-            }
-            $("#namesbox").val(namesbreak);
-        }
-
-        function gup(para) {
-            para = para.replace(/[\[]/, "\\\[").replace(/[\]]/, "\\\]");
-            var regexS = "[\\?&]" + para + "=([^&#]*)";
-            var regex = new RegExp(regexS);
-            var results = regex.exec(window.location.href);
-            if (results == null)
-                return "";
-            else
-                return results[1];
-        }
 
         function randOrd() {
             return (Math.round(Math.random()) - 0.5);
